# django-progressbar-sample

./: Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
app/: manage.py
app/django_progressbar/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/templates/: base.html
app/templates/upload_file/: success.html  upload.html
app/upload_file/: forms.py  urls.py  views.py
